synced media from live site; implemented dynamic sizing of background image to avoid visible tiling.

--- a/static/css/theme.less
+++ b/static/css/theme.less
@@ -81,6 +81,9 @@ main                        {background-color: @white;
 
 /*-- footer --------------------------------------------------*/
 footer#footer               {background-color: @danger;
+                             position: fixed;
+                             bottom: 0;
+                             width: 100%;
                              color: #fff;
                              margin-top: 0;
     div.row                 {border-top: 0px solid transparent;
